--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -25,3 +25,8 @@ jobs:
 
 #    - name: Run distcheck
 #      run: make distcheck
+    - name: Upload binary
+      uses: actions/upload-artifact@v2
+      with:
+        name: helloo
+        path: binaries/
