--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -48,7 +48,7 @@ jobs:
       uses: tiobe/tics-github-action@v3
       with:
         mode: client
-        project: ubuntu-frame
+        project: tests
         viewerUrl: https://canonical.tiobe.com/tiobeweb/TICS/api/cfg?name=default
         ticsAuthToken: ${{ secrets.TICSAUTHTOKEN }}
         installTics: true
