--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -49,6 +49,7 @@ jobs:
       with:
         mode: client
         project: tests
+        filelist: .
         viewerUrl: https://canonical.tiobe.com/tiobeweb/TICS/api/cfg?name=default
         ticsAuthToken: ${{ secrets.TICSAUTHTOKEN }}
         installTics: true
