--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -17,7 +17,7 @@ jobs:
         username: ${{ github.actor }}
         password: ${{ secrets.PKGTOKEN }}
     steps:
-    
+    - uses: actions/checkout@v4
     - name: Run TICS analysis
       uses: tiobe/tics-github-action@v3
       with:
