--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -16,11 +16,21 @@ jobs:
       credentials:
         username: ${{ github.actor }}
         password: ${{ secrets.PKGTOKEN }}
+        
     steps:
     - name: Checkout repository code
       uses: actions/checkout@v4
-      
-    - name: Run TICS analysis
+
+    - name: Build the project
+      run: make
+
+    - name: Run TICS analysis with the script
+      run:
+         set -x
+         export TICSAUTHTOKEN="${{ secrets.TICSAUTHTOKEN }}"
+         TICSQServer -project testimage -tmpdir /tmp/tics -branchdir "${{ github.workspace }}"
+    
+    - name: Run TICS analysis with github-action
       uses: tiobe/tics-github-action@v3
       with:
         mode: client
