--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -22,9 +22,7 @@ jobs:
       uses: actions/checkout@v4
 
     - name: Install dependencies
-      run: |
-           sudo apt install --yes \
-           build-essential s
+      run: sudo apt-get update && sudo apt-get install -y build-essential
 
     - name: Build the project
       run: make
