--- a/.github/workflows/ticsrun.yml
+++ b/.github/workflows/ticsrun.yml
@@ -27,11 +27,11 @@ jobs:
     - name: Build the project
       run: make
 
-    - name: Run TICS analysis with the script
-      run:
-         set -x
-         export TICSAUTHTOKEN="${{ secrets.TICSAUTHTOKEN }}"
-         TICSQServer -project testimage -tmpdir /tmp/tics -branchdir "${{ github.workspace }}"
+    #- name: Run TICS analysis with the script
+    #  run:
+    #     set -x
+    #     export TICSAUTHTOKEN="${{ secrets.TICSAUTHTOKEN }}"
+    #     TICSQServer -project testimage -tmpdir /tmp/tics -branchdir "${{ github.workspace }}"
     
     - name: Run TICS analysis with github-action
       uses: tiobe/tics-github-action@v3
