--- a/.github/workflows/ticsrun.yml
+++ b/.github/workflows/ticsrun.yml
@@ -27,18 +27,18 @@ jobs:
     - name: Build the project
       run: make
 
-    #- name: Run TICS analysis with the script
-    #  run:
-    #     set -x
-    #     export TICSAUTHTOKEN="${{ secrets.TICSAUTHTOKEN }}"
-    #     TICSQServer -project testimage -tmpdir /tmp/tics -branchdir "${{ github.workspace }}"
+    - name: Run TICS analysis with the script
+      run:
+         set -x
+         export TICSAUTHTOKEN="${{ secrets.TICSAUTHTOKEN }}"
+         TICSQServer -project testimage -tmpdir /tmp/tics -branchdir "${{ github.workspace }}"
     
     - name: Run TICS analysis with github-action
       uses: tiobe/tics-github-action@v3
       with:
         mode: qserver
         project: testimage
-        filelist: . #"${{ github.workspace }}"
+        filelist: ${{ github.workspace }}
         viewerUrl: https://canonical.tiobe.com/tiobeweb/TICS/api/cfg?name=default
         ticsAuthToken: ${{ secrets.TICSAUTHTOKEN }}
-        installTics: true
+        installTics: false
