--- a/.github/workflows/ticsrun.yml
+++ b/.github/workflows/ticsrun.yml
@@ -31,4 +31,4 @@ jobs:
       run: |
            set -x
            export TICSAUTHTOKEN="${{ secrets.TICSAUTHTOKEN }}"
-           TICSQServer -project testimage -tmpdir /tmp/tics -branchdir "${{ github.workspace }}"
+           TICSQServer -project testimage -tmpdir /tmp/tics -branchdir "${{ github.workspace }}" -branchname "main"
