--- a/.github/workflows/tics-github-action.yml
+++ b/.github/workflows/tics-github-action.yml
@@ -32,7 +32,8 @@ jobs:
       with:
         mode: qserver
         project: testimage
-        filelist: ${{ github.workspace }}
+        filelist: .
+        branchdir: ${{ github.workspace }}
         viewerUrl: https://canonical.tiobe.com/tiobeweb/TICS/api/cfg?name=default
         ticsAuthToken: ${{ secrets.TICSAUTHTOKEN }}
         installTics: false
