--- a/.github/workflows/ticsrun.yml
+++ b/.github/workflows/ticsrun.yml
@@ -31,4 +31,6 @@ jobs:
       run: |
            set -x
            export TICSAUTHTOKEN="${{ secrets.TICSAUTHTOKEN }}"
+           echo "$whoiam"
+           source /root/.profile
            TICSQServer -project testimage -tmpdir /tmp/tics -branchdir .
