--- a/.github/workflows/ticsrun.yml
+++ b/.github/workflows/ticsrun.yml
@@ -31,6 +31,6 @@ jobs:
       run: |
            set -x
            export TICSAUTHTOKEN="${{ secrets.TICSAUTHTOKEN }}"
-           echo "$whoiam"
+           whoami
            source /root/.profile
            TICSQServer -project testimage -tmpdir /tmp/tics -branchdir .
