--- a/.github/workflows/ticsrun.yml
+++ b/.github/workflows/ticsrun.yml
@@ -22,7 +22,8 @@ jobs:
       uses: actions/checkout@v4
 
     - name: Install dependencies
-      run: apt-get update && apt-get install -y build-essential
+    #  run: apt-get update && apt-get install -y build-essential
+      run: apt-get install -y build-essential
 
     - name: Build the project
       run: make
@@ -31,6 +32,5 @@ jobs:
       run: |
            set -x
            export TICSAUTHTOKEN="${{ secrets.TICSAUTHTOKEN }}"
-           whoami
-           source /root/.profile
+           echo $PATH
            TICSQServer -project testimage -tmpdir /tmp/tics -branchdir .
