--- a/.github/workflows/ticsrun.yml
+++ b/.github/workflows/ticsrun.yml
@@ -32,5 +32,5 @@ jobs:
       run: |
            set -x
            export TICSAUTHTOKEN="${{ secrets.TICSAUTHTOKEN }}"
-           echo $PATH
+           pwd
            TICSQServer -project testimage -tmpdir /tmp/tics -branchdir .
