--- a/.github/workflows/ticsrun.yml
+++ b/.github/workflows/ticsrun.yml
@@ -23,7 +23,7 @@ jobs:
 
     - name: Install dependencies
     #  run: apt-get update && apt-get install -y build-essential
-      run: apt-get install -y build-essential
+      run: apt-get install -y build-essential git
 
     - name: Build the project
       run: make
