--- a/.github/workflows/ticsrun.yml
+++ b/.github/workflows/ticsrun.yml
@@ -25,8 +25,8 @@ jobs:
     #  run: apt-get update && apt-get install -y build-essential
       run: apt-get install -y build-essential git
 
-    - name: Build the project
-      run: make
+    #- name: Build the project
+    #  run: make
 
     - name: Run TICS analysis with the script
       run: |
