--- a/.github/workflows/ticsrun.yml
+++ b/.github/workflows/ticsrun.yml
@@ -32,6 +32,4 @@ jobs:
       run: |
            set -x
            export TICSAUTHTOKEN="${{ secrets.TICSAUTHTOKEN }}"
-           whoami
-           pwd
-           TICSQServer -project testimage -tmpdir /tmp/tics -branchdir "${{ github.workspace }}"
+           TICSQServer -project testimage -tmpdir /tmp/tics -branchdir '/__w/test/'
