--- a/.github/workflows/tics-github-action.yml
+++ b/.github/workflows/tics-github-action.yml
@@ -22,17 +22,14 @@ jobs:
       uses: actions/checkout@v4
 
     - name: Install dependencies
-      run: apt-get update && apt-get install -y build-essential
-
-    #- name: Build the project
-    #  run: make
+      run: apt-get install -y build-essential git
 
     - name: Run TICS analysis with github-action
       uses: tiobe/tics-github-action@v3
       with:
         mode: qserver
         project: testimage
-        filelist: .
+        brachdir: ${{ github.workspace }}
         viewerUrl: https://canonical.tiobe.com/tiobeweb/TICS/api/cfg?name=default
         ticsAuthToken: ${{ secrets.TICSAUTHTOKEN }}
         installTics: false
