--- a/.github/workflows/tics-github-action.yml
+++ b/.github/workflows/tics-github-action.yml
@@ -32,4 +32,4 @@ jobs:
         brachdir: ${{ github.workspace }}
         viewerUrl: https://canonical.tiobe.com/tiobeweb/TICS/api/cfg?name=default
         ticsAuthToken: ${{ secrets.TICSAUTHTOKEN }}
-        installTics: false
+        installTics: true
