--- a/.github/workflows/ticsrun.yml
+++ b/.github/workflows/ticsrun.yml
@@ -22,8 +22,7 @@ jobs:
       uses: actions/checkout@v4
 
     - name: Install dependencies
-    #  run: apt-get update && apt-get install -y build-essential
-      run: apt-get install -y build-essential git
+    #  run: apt-get update
 
     #- name: Build the project
     #  run: make
