--- a/.github/workflows/ticsrun.yml
+++ b/.github/workflows/ticsrun.yml
@@ -21,7 +21,7 @@ jobs:
     - name: Checkout the project
       uses: actions/checkout@v4
 
-    - name: Install dependencies
+    #- name: Install dependencies
     #  run: apt-get update
 
     #- name: Build the project
