--- a/.github/workflows/ticsrun.yml
+++ b/.github/workflows/ticsrun.yml
@@ -21,8 +21,8 @@ jobs:
     - name: Checkout the project
       uses: actions/checkout@v4
 
-    #- name: Install dependencies
-    #  run: apt-get update
+    - name: Install dependencies
+      run: sudo apt-get update
 
     #- name: Build the project
     #  run: make
