--- a/.github/workflows/tics-github-action.yml
+++ b/.github/workflows/tics-github-action.yml
@@ -22,7 +22,7 @@ jobs:
       uses: actions/checkout@v4
 
     - name: Install dependencies
-      run: apt-get install -y build-essential git
+      run: sudo apt-get update
 
     - name: Run TICS analysis with github-action
       uses: tiobe/tics-github-action@v3
