--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -22,7 +22,7 @@ jobs:
       uses: actions/checkout@v4
 
     - name: Install dependencies
-      run: apt-get update && apt-get install -y build-essential
+      run: sudo apt-get update
 
     - name: Build the project
       run: make
