--- a/.github/workflows/tics-github-action.yml
+++ b/.github/workflows/tics-github-action.yml
@@ -30,7 +30,7 @@ jobs:
         mode: client
         project: testimage
         tmpdir: /tmp/tics
-        branchdir: .
+        #branchdir: .
         viewerUrl: https://canonical.tiobe.com/tiobeweb/TICS/api/cfg?name=default
         ticsAuthToken: ${{ secrets.TICSAUTHTOKEN }}
         installTics: false
