--- a/.github/workflows/tics-github-action.yml
+++ b/.github/workflows/tics-github-action.yml
@@ -27,11 +27,9 @@ jobs:
     - name: Run TICS analysis with github-action
       uses: tiobe/tics-github-action@v3
       with:
-        mode: client
+        mode: qserver
         project: testimage
-        tmpdir: /tmp/tics
-        filelist: .
-        #branchdir: .
+        branchdir: .
         viewerUrl: https://canonical.tiobe.com/tiobeweb/TICS/api/cfg?name=default
         ticsAuthToken: ${{ secrets.TICSAUTHTOKEN }}
         installTics: false
